# dapa

./: stack-8.0.2.yaml
echronos/: README.md
gec/: stack-8.0.2.yaml
gidl/: stack-8.0.2.yaml
ivory/: ivory.cabal  package.yaml  stack-8.0.2.yaml
ivory-tower-posix/: stack-8.0.2.yaml
ivory-tower-stm32/: package.yaml  stack-8.0.2.yaml  tower-stm32.cabal
ivory-tower-stm32/.stack-work/: stack.sqlite3
ivory-tower-stm32/ivory-bsp-tests/bsp-can-test/: Makefile  bl_image  bl_image.map  debug_ast.txt  debug_mods.txt  image  image.map  image.px4  stm32_main.h  tower_gen_monitor_can1PeripheralDriver.c  tower_gen_monitor_can1PeripheralDriver.h  tower_gen_monitor_simplecontroller.c  tower_gen_monitor_simplecontroller.h  tower_gen_thread_init.c  tower_gen_thread_init.h  tower_gen_thread_period_250ms.c  tower_gen_thread_period_250ms.h  tower_gen_thread_signal_CAN1_RX0_IRQHandler.c  tower_gen_thread_signal_CAN1_RX0_IRQHandler.h  tower_gen_thread_signal_CAN1_RX1_IRQHandler.c  tower_gen_thread_signal_CAN1_RX1_IRQHandler.h  tower_init.c  (+16 more)
ivory/ivory-backend-acl2/: Testcases.hs
smaccmpilot-org/: stack.yaml
smaccmpilot-stm32f4/: gidl-bootstrap.yaml  stack-8.0.2.yaml
smaccmpilot-stm32f4/.stack-work/: stack.sqlite3
tower/: package.yaml  stack-8.0.2.yaml  towers.cabal
tower-camkes-odroid/: .travis.yml  LICENSE  Makefile  Makefile.deps  Makefile.sandbox  README.md  stack-7.10.yaml  stack-8.0.2.yaml  tower-camkes-odroid.cabal
tower-camkes-odroid/data/camera_vm/components/VM/: VM.camkes
tower-camkes-odroid/data/camera_vm/components/VM/src/: vmlinux.c
tower-camkes-odroid/data/camera_vm/components/camera_vm/: camera_vm.camkes
tower-camkes-odroid/data/camera_vm/components/camera_vm/include/: smaccm_camera_vm.h
tower-camkes-odroid/data/camera_vm/components/camera_vm/src/: camera_vm.c
tower-camkes-odroid/data/can/components/can_node/: can_node.camkes
tower-camkes-odroid/src/Tower/Odroid/: CAN.hs  CameraVM.hs  UART.hs
tower-camkes-odroid/test/: SerialTest.hs
tower-camkes-odroid/test/camera_vm/: CameraVMTest.hs
tower-camkes-odroid/test/camera_vm/camera_vm_test_artifacts/: Kbuild  Kconfig  camkesmakefile.mk
tower-camkes-odroid/test/can_test/: CANTest.hs
tower-camkes-odroid/test/can_test/can_test_artifacts/: camkesmakefile.mk
(+1056 files in other folders)
